# api/src/infrastructure/db/models/users.rs
@@ -12,6 +12,7 @@ pub struct UserDbModel {
     pub middle_name: Option<String>,
     pub last_name: Option<String>,
     pub suffix: Option<String>,
+    pub face_photo: Option<String>,
     pub created_at: OffsetDateTime,
     pub updated_at: OffsetDateTime,
 }
@@ -26,6 +27,7 @@ impl From<UserDbModel> for User {
             middle_name: model.middle_name,
             last_name: model.last_name,
             suffix: model.suffix,
+            face_photo: model.face_photo,
             created_at: model.created_at,
             updated_at: model.updated_at,
         }
